# izwi

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  vercel.ts
crates/izwi-cli/: Cargo.toml  README.md
crates/izwi-cli/src/: config.rs  main.rs
crates/izwi-cli/src/app/: cli.rs  mod.rs
crates/izwi-cli/src/commands/: bench.rs  config.rs  diarize.rs  models.rs  pull.rs  serve.rs  status.rs  transcribe.rs  tts.rs  version.rs
crates/izwi-core/: Cargo.toml  build.rs
crates/izwi-core/src/: config.rs  error.rs  lib.rs  serve_runtime.rs  tokenizer.rs
crates/izwi-core/src/artifacts/: downloader.rs  mod.rs
crates/izwi-core/src/audio/: inspection.rs  mod.rs  preprocessing.rs  resampling.rs
crates/izwi-core/src/backends/: capabilities.rs  cuda_runtime.rs  device.rs  mod.rs  policy.rs  router.rs  types.rs
crates/izwi-core/src/catalog/: cuda_support.rs  metadata.rs  mod.rs  variant.rs
crates/izwi-core/src/engine/: config.rs  core.rs  executor.rs  kv_cache.rs  metal_kv_cache.rs  metrics.rs  mod.rs  output.rs  request.rs  scheduler.rs  signal_frontend.rs  types.rs
crates/izwi-core/src/engine/cache/: kv.rs  metal.rs  mod.rs
crates/izwi-core/src/engine/executor/: audio.rs  dispatch.rs  handler_asr.rs  handler_audio_chat.rs  handler_chat.rs  handler_s2s.rs  handler_tts.rs  state.rs  streaming.rs
crates/izwi-core/src/engine/output/: mod.rs
crates/izwi-core/src/kernels/: buffer_pool.rs  cuda.rs  cuda_support.rs  metal.rs  mod.rs
crates/izwi-core/src/model/: download.rs  info.rs  manager.rs  mod.rs  residency.rs
crates/izwi-core/src/models/: mod.rs  registry.rs
crates/izwi-core/src/models/architectures/: mod.rs
crates/izwi-core/src/models/architectures/fish_s2/: artifacts.rs  codec.rs  config.rs  contracts.rs  dac.rs  fast.rs  mod.rs  slow.rs  smoke.rs  tokenizer.rs  weights.rs
crates/izwi-core/src/models/architectures/gemma3/: chat.rs
crates/izwi-core/src/models/architectures/granite_speech/: mod.rs
crates/izwi-core/src/models/architectures/kokoro/: decoder.rs  mod.rs  phonemizer.rs  prosody.rs
crates/izwi-core/src/models/architectures/lfm2/: chat.rs  mod.rs
crates/izwi-core/src/models/architectures/lfm25_audio/: audio_output.rs  backbone.rs  bundle.rs  cache.rs  config.rs  conformer.rs  detokenizer.rs  mod.rs  model.rs  preprocessor.rs  sampling.rs  tokenizer.rs
crates/izwi-core/src/models/architectures/nemotron/: mod.rs
crates/izwi-core/src/models/architectures/qwen3/: chat.rs  core.rs
crates/izwi-core/src/models/architectures/qwen35/: chat.rs  mod.rs  text.rs  vision.rs
crates/izwi-core/src/models/architectures/vibevoice/: asr.rs  config.rs  connector.rs  diffusion.rs  mod.rs  prompt.rs  tokenizer.rs  tts.rs
crates/izwi-core/src/models/architectures/voxtral/: layers.rs  lm.rs  mod.rs
crates/izwi-core/src/models/architectures/whisper/: mod.rs  model.rs
crates/izwi-core/src/models/families/: mod.rs
crates/izwi-core/src/models/shared/: chat.rs  config.rs  device.rs  mod.rs  telemetry.rs
crates/izwi-core/src/models/shared/attention/: flash.rs  paged.rs
crates/izwi-core/src/models/shared/weights/: gguf.rs  layout.rs  mod.rs  pytorch.rs  quantization.rs
crates/izwi-core/src/runtime/: adapters.rs  asr.rs  audio_io.rs  broker.rs  chat.rs  conformance.rs  diarization.rs  kokoro.rs  lfm2.rs  mod.rs  pipeline.rs  request.rs  service.rs  speech_to_speech.rs  tts.rs  types.rs  voice_metrics.rs  voice_session.rs
crates/izwi-core/src/runtime/capabilities/: mod.rs
crates/izwi-core/src/runtime/lifecycle/: instantiate.rs  load.rs  phases.rs  publish.rs  unload.rs
crates/izwi-core/src/runtime/telemetry/: metrics.rs  mod.rs  replay.rs  tracing.rs
crates/izwi-core/src/runtime_models/: mod.rs
crates/izwi-core/tests/: capability_conformance.rs
crates/izwi-hooks/: Cargo.toml
crates/izwi-hooks/src/: lib.rs
crates/izwi-server/: Cargo.toml
crates/izwi-server/src/: chat_store.rs  diarization_store.rs  error.rs  lib.rs  logging.rs  main.rs  onboarding_store.rs  saved_voice_store.rs  speech_history_store.rs  state.rs  storage_layout.rs  studio_project_store.rs  studio_store.rs  test_support.rs  transcription_store.rs  tts_project_store.rs  voice_defaults.rs  voice_memory.rs  voice_observation_store.rs  voice_store.rs
crates/izwi-server/src/api/: audio_payload.rs  docs.rs  mod.rs  openapi.rs  request_context.rs  router.rs  speech_text_upload.rs  summary.rs  tts_long_form.rs
crates/izwi-server/src/api/admin/: mod.rs  models.rs
crates/izwi-server/src/api/agent/: handlers.rs  mod.rs
crates/izwi-server/src/api/chat/: handlers.rs  mod.rs
crates/izwi-server/src/api/diarization/: handlers.rs  mod.rs
crates/izwi-server/src/api/internal/: health.rs  metrics.rs  mod.rs  probes.rs
crates/izwi-server/src/api/jobs/: handlers.rs  mod.rs
crates/izwi-server/src/api/media/: handlers.rs  mod.rs
crates/izwi-server/src/api/onboarding/: handlers.rs  mod.rs
crates/izwi-server/src/api/openai/: compat.rs  compat_harness.rs  mod.rs
crates/izwi-server/src/api/openai/audio/: align.rs  diarizations.rs  mod.rs  speech.rs  speech_to_speech.rs  transcriptions.rs
crates/izwi-server/src/api/openai/chat/: completions.rs
crates/izwi-server/src/api/openai/common/: mod.rs
crates/izwi-server/src/api/saved_voices/: handlers.rs  mod.rs
crates/izwi-server/src/api/speech_history/: handlers.rs  mod.rs
crates/izwi-server/src/api/studio/: handlers.rs  mod.rs
crates/izwi-server/src/api/transcription/: handlers.rs  mod.rs  realtime.rs  unified_read.rs  unified_write.rs
crates/izwi-server/src/api/tts_projects/: handlers.rs  mod.rs
crates/izwi-server/src/api/voice/: handlers.rs  mod.rs
crates/izwi-server/src/api/voice_realtime/: mod.rs
crates/izwi-server/src/app/: chat.rs  chat_content.rs  mod.rs  transcription_realtime.rs  voice_realtime.rs
crates/izwi-server/src/batch_runtime/: store.rs  types.rs  worker.rs
crates/izwi-server/src/db/: migrator.rs  mod.rs  raw.rs  schema_contract.rs  sqlite.rs
crates/izwi-server/src/entity/: mod.rs
crates/izwi-server/src/persistence/: mod.rs
docs/: RELEASING.md  (+3 more)
tasks/: todo.md  (+1 more)
(+315 files in other folders)
