[workspace]
resolver = "2"
members = [
    "crates/izwi-asr-toolkit",
    "crates/izwi-agent",
    "crates/izwi-core",
    "crates/izwi-hooks",
    "crates/izwi-server",
    "crates/izwi-cli",
    "crates/izwi-desktop",
]

[workspace.package]
version = "0.1.0-beta-14"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/izwi-ai/izwi"
authors = ["Agentem <info@agentem.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Web framework
axum = { version = "0.8.9", features = ["ws", "multipart"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
utoipa = { version = "5.4.0", features = ["preserve_path_order"] }
scalar_api_reference = { version = "0.2.2", features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Model loading
hf-hub = { version = "0.5", default-features = false, features = [
    "rustls-tls",
    "tokio",
    "ureq",
] }
safetensors = "0.4"
tokenizers = "0.22.2"

# Candle (native inference)
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"

# Audio processing
hound = "3.5"
symphonia = { version = "0.5", default-features = false }
rubato = "0.15"
rustfft = "6.2"

# MLX bindings (Apple Silicon ML framework)
# Note: mlx-rs is still experimental, we'll use FFI bindings
# mlx-rs = { git = "https://github.com/oxideai/mlx-rs" }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.9"
base64 = "0.22"
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "stream",
    "blocking",
    "rustls-tls",
] }
indicatif = "0.17"
dirs = "5.0"
sha2 = "0.10"
memmap2 = "0.9.10"

# Configuration
config = "0.14"
