[package]
name = "izwi-core"
description = "Core TTS inference engine for Qwen3-TTS models on Apple Silicon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
izwi-asr-toolkit = { path = "../izwi-asr-toolkit" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }

hf-hub = { workspace = true }
safetensors = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { version = "0.9.2", optional = true }

hound = { workspace = true }
symphonia = { workspace = true, default-features = false, features = [
    "all-formats",
    "all-codecs",
] }
rubato = { workspace = true }
rustfft = { workspace = true }
zip = "7"
flate2 = "1"
tar = "0.4"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
    "bmp",
] }
memmap2 = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn", "candle-transformers/flash-attn"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

# Note: Direct Metal access is available via feature flags.
# Currently all Metal functionality is provided through Candle's abstraction.

[dev-dependencies]
tokio-test = "0.4"
