[package]
name = "izwi-hooks"
description = "Enterprise hook contracts and no-op implementations for Izwi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { version = "=2.0.0-rc.38", default-features = false }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
