[package]
name = "izwi-server"
description = "HTTP API server for Izwi TTS inference engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "izwi-server"
path = "src/main.rs"

[features]
default = []
cuda = ["izwi-core/cuda"]

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
hound = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"
izwi-agent = { path = "../izwi-agent" }

config = { workspace = true }
dirs = { workspace = true }
rusqlite = { version = "0.38.0", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
izwi-core = { path = "../izwi-core", default-features = false, features = ["metal", "accelerate"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
izwi-core = { path = "../izwi-core", default-features = false }

[dev-dependencies]
tempfile = "3.10"
